WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251834
WebKitTestRunner crashes when run with --world-leaks
https://bugs.webkit.org/show_bug.cgi?id=251834
Summary
WebKitTestRunner crashes when run with --world-leaks
Simon Fraser (smfr)
Reported
2023-02-06 20:55:25 PST
run-webkit-tests dom/html/level2/html --world-leaks Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 JavaScriptCore 0x11700d41e WTFCrash + 14 (Assertions.cpp:327) 1 WebKitTestRunner 0x10dd2912b WTFCrashWithInfo(int, char const*, char const*, int) + 27 (Assertions.h:758) 2 WebKitTestRunner 0x10dd74fab void WTF::HashTable<unsigned long long, WTF::KeyValuePair<unsigned long long, WTF::String>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long long, WTF::String> >, WTF::DefaultHash<unsigned long long>, WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<unsigned long long> >::checkKey<WTF::HashMapTranslator<WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::DefaultHash<unsigned long long> >, unsigned long long>(unsigned long long const&) + 139 (HashTable.h:659) 3 WebKitTestRunner 0x10dd74c80 WTF::HashTableAddResult<WTF::HashTableIterator<WTF::HashTable<unsigned long long, WTF::KeyValuePair<unsigned long long, WTF::String>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long long, WTF::String> >, WTF::DefaultHash<unsigned long long>, WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<unsigned long long> >, unsigned long long, WTF::KeyValuePair<unsigned long long, WTF::String>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long long, WTF::String> >, WTF::DefaultHash<unsigned long long>, WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<unsigned long long> > > WTF::HashTable<unsigned long long, WTF::KeyValuePair<unsigned long long, WTF::String>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long long, WTF::String> >, WTF::DefaultHash<unsigned long long>, WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<unsigned long long> >::add<WTF::HashMapTranslator<WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::DefaultHash<unsigned long long> >, unsigned long long, WTF::String>(unsigned long long&&, WTF::String&&) + 64 (HashTable.h:880) 4 WebKitTestRunner 0x10dd74c05 WTF::HashTableAddResult<WTF::HashTableIterator<WTF::HashTable<unsigned long long, WTF::KeyValuePair<unsigned long long, WTF::String>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long long, WTF::String> >, WTF::DefaultHash<unsigned long long>, WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<unsigned long long> >, unsigned long long, WTF::KeyValuePair<unsigned long long, WTF::String>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long long, WTF::String> >, WTF::DefaultHash<unsigned long long>, WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<unsigned long long> > > WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::inlineAdd<unsigned long long, WTF::String>(unsigned long long&&, WTF::String&&) + 85 (HashMap.h:394) 5 WebKitTestRunner 0x10dd4c0d5 WTF::HashTableAddResult<WTF::HashTableIterator<WTF::HashTable<unsigned long long, WTF::KeyValuePair<unsigned long long, WTF::String>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long long, WTF::String> >, WTF::DefaultHash<unsigned long long>, WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<unsigned long long> >, unsigned long long, WTF::KeyValuePair<unsigned long long, WTF::String>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<unsigned long long, WTF::String> >, WTF::DefaultHash<unsigned long long>, WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<unsigned long long> > > WTF::HashMap<unsigned long long, WTF::String, WTF::DefaultHash<unsigned long long>, WTF::HashTraits<unsigned long long>, WTF::HashTraits<WTF::String>, WTF::HashTableTraits>::add<WTF::String>(unsigned long long&&, WTF::String&&) + 85 (HashMap.h:436) 6 WebKitTestRunner 0x10dd4bd43 WTR::TestController::didReceiveLiveDocumentsList(OpaqueWKArray const*) + 179 (TestController.cpp:1786)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-02-06 20:55:45 PST
<
rdar://problem/105112156
>
Simon Fraser (smfr)
Comment 2
2023-02-06 20:59:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9737
EWS
Comment 3
2023-02-07 10:09:15 PST
Committed
259965@main
(dda823035231): <
https://commits.webkit.org/259965@main
> Reviewed commits have been landed. Closing PR #9737 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug