WebKitTestRunner crashes when run with --world-leaks https://bugs.webkit.org/show_bug.cgi?id=251834 rdar://105112156

Reviewed by Cameron McCormack.

Document::identifier() (aka ScriptExecutionContext::identifier()) is now a UUID, which doesn't convert to a uint64_t,
so just convert it to a string for the abandoned documents hash key.

* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::didReceiveLiveDocumentsList):
* Tools/WebKitTestRunner/TestController.h:

Canonical link: https://commits.webkit.org/259965@main